# cloud-music

./: .env.example  .env.template  .gitignore  AWS_SETUP_INSTRUCTIONS.md  CLAUDE.md  README.md  README_SETUP.md  SPEC.md  TASKS.md  check_aws_readiness.py  config.py  launcher.py  monitor_all_logs.py  monitor_worker.py  pyproject.toml  setup_aws.py  worker.py
.claude/: settings.local.json
docs/: EXECUTION_GUIDE.md  LOGGING_GUIDE.md  SPEC.md  TASKS.md
